--- a/pf/styles.css
+++ b/pf/styles.css
@@ -42,8 +42,6 @@ body {
     letter-spacing: 2px; /* Espaciado opcional para mayor efecto retro */
 }
 
-
-
 .nav-right {
     display: flex;
     align-items: center;
@@ -79,7 +77,7 @@ body {
 .hero-section {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 70vh; /* Cambiar altura a un 60% del viewport */
     overflow: hidden;
 }
 
@@ -88,6 +86,7 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
 
 .overlay {
     position: absolute;
@@ -100,33 +99,33 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 60px;
+    padding: 40px; /* Reducir padding */
 }
 
 .hero-text {
     color: white;
-    max-width: 46%;
+    max-width: 90%; /* Asegurarse de que se adapte en pantallas pequeñas */
     margin-bottom: 20px;
 }
 
 .hero-text h2 {
-    font-size: 46px;
+    font-size: 36px; /* Reducir tamaño de fuente */
     margin-bottom: 20px;
-    line-height: 1.5;
+    line-height: 1.3;
 }
 
 .hero-text p {
-    font-size: 16px;
+    font-size: 14px; /* Reducir fuente en párrafos */
     color: #ccc;
 }
 
-/* Botones circulares */
 .hero-buttons {
     display: flex;
     flex-direction: row; /* Alineación horizontal */
-    gap: 15px; /* Espaciado entre botones */
+    gap: 15px;
     margin-top: 20px;
 }
+
 
 .circle-button {
     width: 50px;
@@ -351,6 +350,7 @@ body {
     font-size: 18px;
     margin-bottom: 15px;
     color: yellow;
+    
 }
 
 .footer-section p {
@@ -391,21 +391,3 @@ body {
 
 
 /* Responsividad */
-@media (max-width: 768px) {
-    .carousel-item img {
-        height: 200px;
-    }
-
-    .hero-text h2 {
-        font-size: 28px;
-    }
-
-    .hero-text p {
-        font-size: 14px;
-    }
-
-    .login-button,
-    .search-bar {
-        padding: 5px;
-    }
-}
